fix banner bleed

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -45,6 +45,7 @@
 
 @media only screen and (min-width: @screen-md) {
     #banner {
+        position: relative;
         top: -35px;
         z-index: -1;
     }
